--- a/Vista/Site.Master
+++ b/Vista/Site.Master
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    
+
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
@@ -35,19 +35,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto pt-3 pt-lg-0">
-                        
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solicitudes
                             </a>
                             <div class="dropdown-menu border-0 shadow animate slideIn" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/">Todas</a>
-                                <a class="dropdown-item" href="/">Aprobadas</a>
-                                <a class="dropdown-item" href="/">Pendientes</a>
-                                <a class="dropdown-item" href="/">Rechazadas</a>
+                                <a class="dropdown-item" href="Default.aspx?condicion=aprobadas">Aprobadas</a>
+                                <a class="dropdown-item" href="Default.aspx?condicion=pendientes">Pendientes</a>
+                                <a class="dropdown-item" href="Default.aspx?condicion=rechazadas">Rechazadas</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Remitos</a>
+                            <a class="nav-link" href="RemitoListado.aspx">Remitos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="EmpresaListado.aspx?condicion=habilitadas&tipo=cliente">Clientes</a>
@@ -55,29 +55,38 @@
                         <li class="nav-item">
                             <a class="nav-link" href="EmpresaListado.aspx?condicion=habilitadas&tipo=transportista">Transportistas</a>
                         </li>
+
+                        <% if (usuarioTipo == 2)
+                            {
+                        %>
                         <li class="nav-item">
                             <a class="nav-link" href="CAIListado.aspx">CAI</a>
                         </li>
+                        <%
+                            }
+                        %>
                         <li class="nav-item">
                             <a class="nav-link" href="ArticuloListado.aspx?condicion=habilitados">Artículos</a>
                         </li>
-                        
+
                     </ul>
                     <ul class="navbar-nav pb-3 pb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuario
-                            </a>
+                            <asp:Label CssClass="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ID="lbNombreUsuarioMenu" runat="server"></asp:Label>
+                            <%--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuario
+                            </a>--%>
                             <div class="dropdown-menu border-0 shadow animate slideIn" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/">Datos Personales</a>
+                                <a class="dropdown-item" href="UsuarioDetalle.aspx?id=<% = usuario.id_usuario %> ">Datos Personales</a>
                                 <%
-                                    if (true)
+                                    if (usuarioTipo == 2)
                                     {
-                                        %>
-                                        <a class="dropdown-item" href="UsuarioListado.aspx?condicion=habilitados">Listado</a>
-                                        <%
+                                %>
+                                <a class="dropdown-item" href="UsuarioListado.aspx?condicion=habilitados">Listado Usuarios</a>
+                                <a class="dropdown-item" href="MatrizListado.aspx">Listado Matriz</a>
+                                <%
                                     }
-                                    %>
-                                <a class="dropdown-item" href="Login.aspx">Log Out</a>
+                                %>
+                                <a class="dropdown-item" href="LogOut.aspx">Log Out</a>
                             </div>
                         </li>
                     </ul>
